--- a/styles.css
+++ b/styles.css
@@ -493,21 +493,21 @@ body {
         font-size: 30px;
     }
 
-    .ani .githubLin img {
-        height: 20px;
-        width: 20px;
+    .githubLin img {
+        height: 60px;
+        width: 60px;
         margin-top: 10px;
     }
 
     .text .k {
         padding: 20px;
         margin-left: 15px;
-        font-size: 15px;
+        font-size: 17px;
     }
 
     .text .c {
-        padding: 20px 20px 20px 10px;
-        font-size: 15px;
+        padding: 20px;
+        font-size: 17px;
     }
 
     .text h1 {
@@ -525,13 +525,14 @@ body {
 
     .part2 h1 {
         font-size: 65px;
-        margin-top: 250px;
+        margin-top: 10px;
         margin-left: 400px;
         width: 400px;
+        margin-bottom: 0;
     }
 
     .part2 {
-        margin-top: 200px;
+        margin-top: 40px;
     }
 
     .abt1 .img2 {
@@ -542,8 +543,8 @@ body {
     }
 
     .abt2 p {
-        font-size: 20px;
-        width: 500px;
+        font-size: 25px;
+        width: 600px;
     }
 
     .techimg {
@@ -553,7 +554,7 @@ body {
     }
 
     .part3 {
-        margin-top: 700px;
+        margin-top: 30px;
     }
 
     .part3 .exp {
@@ -562,6 +563,7 @@ body {
         margin-left: 400px;
         width: 400px;
         text-align: center;
+        margin-bottom: 0;
     }
 
     .part33 .skills h1 {
@@ -596,7 +598,7 @@ body {
     }
 
     .part4 {
-        margin-top: 1250px;
+        margin-top: 50px;
     }
 
     .part32 .skillname {
@@ -616,7 +618,7 @@ body {
     }
 
     .part4 {
-        margin-top: 1460px;
+        margin-top: 900px;
     }
 
     .content4 {
@@ -667,16 +669,16 @@ body {
     }
 
     .part5 {
-        margin-top: 2600px;
+        margin-top: 2000px;
     }
 
     .footer {
-        margin-top: 600px;
+        margin-top: 200px;
         width: 1200px;
     }
 
     .part5 p {
-        margin-top: 800px;
+        margin-top: 500px;
         font-size: 50px;
         width: 500px;
         margin-left: 1100px;
@@ -695,9 +697,16 @@ body {
 
     .btn {
         margin-top: 50px;
-        margin-left: 900px;
-        width: 225px;
+        margin-left: 870px;
+        width: 340px;
+        font-size: 30px;
     }
+
+    .btn button {
+        font-size: 30px;
+        width: 150px;
+    }
+
 
     .maili {
         display: flex;
